minor css change to compose button and fixed word wrap issue for tweets

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -42,4 +42,5 @@
 
 #nav-bar .buttons button:hover {
   opacity: 1;
+  cursor: pointer;
 }
