--- a/public/styles/tweetainer.css
+++ b/public/styles/tweetainer.css
@@ -41,6 +41,7 @@
 
 .tweet p {
   padding: 0.5em 1em;
+  word-wrap: break-word;
 }
 
 .tweet footer {
